--- a/assetts/game.css
+++ b/assetts/game.css
@@ -22,17 +22,44 @@ body {
 }
 
 .lose {
-  transition: all .3s ease;
+  transition: all 2s ease;
   transform: scale(2.1);
+  animation: rotate .2s .5s 4;
+  transform: rotate(15deg);
+  animation-direction: alternate;
   width: 100%;
   z-index: 300;
 }
 
-#popup {
+@keyframes rotate {
+
+  0% {
+    transform: rotate(20deg)
+  }
+
+  50% {
+    transform: rotate(-20deg)
+  }
+
+  100% {
+    transform: rotate(0deg)
+  }
+
+}
+
+.win {
+  transition: all 1s ease;
+  transform: scale(1.8);
+  width: 100%;
+  z-index: 300;
+}
+
+.popup {
   width: 15rem;
   position: absolute;
   top: 2rem;
-  right: 2rem;
+  right: 50vw;
+  margin-right: -7.5rem;
   z-index: 200;
 }
 
