--- a/assetts/game.css
+++ b/assetts/game.css
@@ -23,6 +23,7 @@ body {
   display: block;
   height: 20px;
   border-radius: 5px;
+  box-shadow: inset 2px 2px 5px rgba(255, 255, 255, 0.644);
   background-color: rgb(43, 194, 83);
 }
 
